# generalize

./: CHANGELOG.md  README.md  conftest.py  pyproject.toml
.github/workflows/: python-package.yml
generalize/: __init__.py  tmp.py
generalize/dataset/: __init__.py  assert_array_shape.py  load_dataset.py  order_dataset.py  parse_labels_to_use.py  subset_dataset.py  utils.py
generalize/evaluate/: __init__.py  confusion_matrices.py  confusion_matrix.py  evaluate.py  evaluate_binary_classifier.py  evaluate_multiclass_classifier.py  evaluate_regression.py  evaluate_repetitions.py  evaluate_splits.py  prepare_inputs.py  probability_densities.py  roc_curves.py  summarize_scores.py
generalize/model/: __init__.py  full_model.py
generalize/model/cross_validate/: __init__.py  cross_validate.py  grid_search.py  kfolder.py  nested_cross_validation.py  sklearn_cross_validate.py
generalize/model/pipeline/: __init__.py  pipeline_designer.py  pipelines.py
generalize/model/transformers/: __init__.py  clip_extremes.py  correlated_feature_remover.py  dim_wrapper.py  flatten_dim.py  index_feature_selector.py  mean_during_test.py  pca_by_explained_variance.py  row_scaler.py  truncate_extremes.py
generalize/model/univariate/: __init__.py  calculate_tree_importance.py  cross_validate_univariate_models.py  evaluate_univariate_models.py  fit_statsmodels_model.py
generalize/model/utils/: __init__.py  add_split_to_groups.py  no_evaluation.py  train_only.py  weighting.py
generalize/utils/: __init__.py  in_out.py  math.py  missing_data.py  naming_utils.py  normalization.py
tests/: test_tmp.py
tests/dataset/: test_dataset_utils.py  test_select_samples.py
tests/evaluate/: test_aggregate_predictions.py  test_confusion_matrices.py  test_evaluate_repetitions.py  test_probability_densities.py  test_roc_curves.py
tests/modeling/: test_cross_validate.py  test_cross_validate_univariate_models.py  test_evaluate_univariate_models.py  test_fit_statsmodels_model.py  test_full_model.py  test_kfolder.py  test_nested_cross_validation.py  test_pipeline.py  test_pipeline_designer.py  test_seeded_gridsearch.py  test_weighting.py
tests/modeling/transformers/: test_correlated_feature_remover.py  test_dim_transformer_wrapper.py  (+5 more)
