[tool.poetry]
name = "generalize"
version = "0.0.1"
description = "Machine learning tools for running repeated nested cross(-dataset)-validation."
authors = ["Ludvig Renbo Olsen <mail@ludvigolsen.dk>"]
readme = "README.md"
repository = "https://github.com/ludvigolsen/generalize"

[tool.poetry.urls]
issues = "https://github.com/ludvigolsen/generalize/issues"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.3.5"
numpy = "^1.21.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
