[tool.poetry]
name = "generalize"
version = "0.1.0"
description = "Machine learning tools for running repeated nested cross(-dataset)-validation."
authors = ["Ludvig Renbo Olsen <mail@ludvigolsen.dk>"]
readme = "README.md"
repository = "https://github.com/ludvigolsen/generalize"

[tool.poetry.urls]
issues = "https://github.com/ludvigolsen/generalize/issues"

[tool.poetry.dependencies]
python = "^3.9"
utipy = "^1.0.2"
scikit-learn = "1.0.2"
pandas = "1.5.3"
numpy = "1.26.4"
joblib = "1.2.0"
statsmodels = "0.14.1"
scipy = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]